<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/des_dep_c4"
                android:background="@color/GRIS2"
                android:textOff="CONSULTAR POR DEPENDENCIA"
                android:textOn="CONSULTAR POR DEPENDENCIA" />

            <LinearLayout
                android:id="@+id/dep_c4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@drawable/borde_layout">

                <TextView
                    android:id="@+id/label_sede"
                    android:text="@string/string_sede"
                    style="@style/labelArkaMovil" />

                <AutoCompleteTextView
                    style="@style/buttonTextArkaMovil"
                    android:id="@+id/sede_c4" />

                <TextView
                    android:id="@+id/label_dependencia"
                    android:text="@string/String_dependencia"
                    style="@style/labelArkaMovil" />

                <AutoCompleteTextView
                    style="@style/buttonTextArkaMovil"
                    android:id="@+id/dependencia_c4" />

                <TextView
                    android:id="@+id/label_ubicacion"
                    android:text="@string/String_ubicacion"
                    style="@style/labelArkaMovil" />

                <AutoCompleteTextView
                    style="@style/buttonTextArkaMovil"
                    android:id="@+id/ubicacion_c4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="consultar"
                    android:layout_marginTop="5dp"
                    android:id="@+id/con_dep_c4" />

            </LinearLayout>

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/des_fun_c4"
                android:background="@color/GRIS2"
                android:layout_marginTop="5dp"
                android:textOff="CONSULTAR POR FUNCIONARIO"
                android:textOn="CONSULTAR POR FUNCIONARIO" />

            <LinearLayout
                android:id="@+id/fun_c4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@drawable/borde_layout">

                <TextView
                    android:id="@+id/label_funcionario"
                    android:text="Documento de Funcionario"
                    style="@style/labelArkaMovil" />

                <AutoCompleteTextView
                    style="@style/buttonTextArkaMovil"
                    android:inputType="number"
                    android:maxLength="17"
                    android:id="@+id/funcionario_c4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="consultar"
                    android:layout_marginTop="5dp"
                    android:id="@+id/con_fun_c4" />

            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/subir_c4"
                android:layout_marginTop="10dp"
                android:src="@drawable/subir"
                android:layout_gravity="center_horizontal" />

            <TableLayout
                android:id="@+id/cabecera_c4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"></TableLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tabla_c4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TableLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/bajar_c4"
                android:layout_marginTop="10dp"
                android:src="@drawable/bajar"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="actualizar"
                android:layout_marginTop="15dp"
                android:id="@+id/actualizar_c4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Generar PDF"
                android:id="@+id/generarpdf_c4" />

            <Button
                style="@style/buttonTextArkaMovil"
                android:id="@+id/escanear_c4"
                android:editable="false"
                android:text="Escanear Placa"
                android:layout_marginTop="20dp"
                android:onClick="escanear" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>
